Delivery_1/Delivery_1:.gitignore/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> PROGRAM_AUX
Rule 2     PROGRAM_AUX -> BLOCK
Rule 3     PROGRAM_AUX -> PROGRAM_AUX BLOCK
Rule 4     BLOCK -> BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY
Rule 5     BLOCK_AUX -> starting
Rule 6     BLOCK_AUX -> empty
Rule 7     RECEIVES_AUX -> receives colon id of_type TYPE RECEIVES_AUX1
Rule 8     RECEIVES_AUX -> empty
Rule 9     RECEIVES_AUX1 -> comma id of_type TYPE RECEIVES_AUX1
Rule 10    RECEIVES_AUX1 -> empty
Rule 11    RETURNS_AUX -> block_returns TYPE
Rule 12    RETURNS_AUX -> empty
Rule 13    BLOCK_BODY -> curlybraces_open BLOCK_BODY_AUX curlybraces_close
Rule 14    BLOCK_BODY_AUX1 -> STATEMENT BLOCK_BODY_AUX1
Rule 15    BLOCK_BODY_AUX1 -> empty
Rule 16    BLOCK_BODY_AUX -> DECLARATIONS BLOCK_BODY_AUX1
Rule 17    BLOCK_BODY_AUX -> BLOCK_BODY_AUX1
Rule 18    TYPE -> whole
Rule 19    TYPE -> decimal
Rule 20    TYPE -> words
Rule 21    TYPE -> boolean
Rule 22    BODY -> curlybraces_open BODY_AUX curlybraces_close
Rule 23    BODY_AUX -> STATEMENT BODY_AUX
Rule 24    BODY_AUX -> empty
Rule 25    CONDITION -> if parenthesis_open EXPRESSION parenthesis_close BODY CONDITION_AUX
Rule 26    CONDITION_AUX -> else BODY
Rule 27    CONDITION_AUX -> empty
Rule 28    CONSTANT -> id CONSTANT_AUX
Rule 29    CONSTANT -> cst_whole
Rule 30    CONSTANT -> cst_decimal
Rule 31    CONSTANT -> cst_words
Rule 32    CONSTANT -> cst_boolean
Rule 33    CONSTANT_AUX -> squarebracket_open EXPRESSION squarebracket_close
Rule 34    CONSTANT_AUX -> parenthesis_open EXPRESSION CONSTANT_AUX1 parenthesis_close
Rule 35    CONSTANT_AUX -> empty
Rule 36    CONSTANT_AUX1 -> comma EXPRESSION CONSTANT_AUX1
Rule 37    CONSTANT_AUX1 -> empty
Rule 38    DECLARATIONS -> VAR_DECLARATION
Rule 39    DECLARATIONS -> LIST_DECLARATION
Rule 40    VAR_DECLARATION -> variable id VAR_DECLARATION_AUX of_type TYPE semicolon
Rule 41    VAR_DECLARATION_AUX -> comma id VAR_DECLARATION_AUX
Rule 42    VAR_DECLARATION_AUX -> empty
Rule 43    LIST_DECLARATION -> variable id squarebracket_open EXPRESSION squarebracket_close of_type TYPE semicolon
Rule 44    EXPRESSION -> EXPRESSION_AUX EXP EXPRESSION_AUX1
Rule 45    EXPRESSION_AUX -> op_negation
Rule 46    EXPRESSION_AUX -> empty
Rule 47    EXPRESSION_AUX1 -> op_and EXPRESSION_AUX EXP
Rule 48    EXPRESSION_AUX1 -> op_or EXPRESSION_AUX EXP
Rule 49    EXP -> ITEM EXP_AUX
Rule 50    EXP_AUX -> op_less ITEM
Rule 51    EXP_AUX -> op_less_equal ITEM
Rule 52    EXP_AUX -> op_greater ITEM
Rule 53    EXP_AUX -> op_greater_equal ITEM
Rule 54    EXP_AUX -> op_equal ITEM
Rule 55    EXP_AUX -> op_not_equal ITEM
Rule 56    EXP_AUX -> empty
Rule 57    FACTOR -> parenthesis_open EXPRESSION parenthesis_close
Rule 58    FACTOR -> FACTOR_AUX
Rule 59    FACTOR_AUX -> op_addition CONSTANT
Rule 60    FACTOR_AUX -> op_subtraction CONSTANT
Rule 61    FACTOR_AUX -> CONSTANT
Rule 62    ITEM -> TERM ITEM_AUX
Rule 63    ITEM_AUX -> op_addition ITEM
Rule 64    ITEM_AUX -> op_subtraction ITEM
Rule 65    ITEM_AUX -> empty
Rule 66    TERM -> FACTOR TERM_AUX
Rule 67    TERM_AUX -> op_multiplication TERM
Rule 68    TERM_AUX -> op_division TERM
Rule 69    TERM_AUX -> empty
Rule 70    STATEMENT -> ASSIGN
Rule 71    STATEMENT -> CONDITION
Rule 72    STATEMENT -> READ
Rule 73    STATEMENT -> WRITE
Rule 74    STATEMENT -> LOOP
Rule 75    STATEMENT -> RETURN
Rule 76    STATEMENT -> CALL
Rule 77    CALL -> call id parenthesis_open EXPRESSION CALL_AUX parenthesis_close semicolon
Rule 78    CALL_AUX -> comma EXPRESSION CALL_AUX
Rule 79    CALL_AUX -> empty
Rule 80    LOOP -> do BODY until parenthesis_open EXPRESSION parenthesis_close
Rule 81    ASSIGN -> id ASSIGN_AUX op_assign EXPRESSION semicolon
Rule 82    ASSIGN_AUX -> squarebracket_open EXPRESSION squarebracket_close
Rule 83    RETURN -> return_statement EXPRESSION semicolon
Rule 84    READ -> input parenthesis_open id READ_AUX parenthesis_close semicolon
Rule 85    READ_AUX -> squarebracket_open EXPRESSION squarebracket_close
Rule 86    READ_AUX -> empty
Rule 87    WRITE -> print parenthesis_open EXPRESSION WRITE_AUX parenthesis_close semicolon
Rule 88    WRITE_AUX -> comma EXPRESSION WRITE_AUX
Rule 89    WRITE_AUX -> empty
Rule 90    empty -> <empty>

Terminals, with rules where they appear

block                : 4
block_returns        : 11
boolean              : 21
call                 : 77
colon                : 7
comma                : 9 36 41 78 88
cst_boolean          : 32
cst_decimal          : 30
cst_whole            : 29
cst_words            : 31
curlybraces_close    : 13 22
curlybraces_open     : 13 22
decimal              : 19
do                   : 80
else                 : 26
error                : 
id                   : 4 7 9 28 40 41 43 77 81 84
if                   : 25
input                : 84
of_type              : 7 9 40 43
op_addition          : 59 63
op_and               : 47
op_assign            : 81
op_division          : 68
op_equal             : 54
op_greater           : 52
op_greater_equal     : 53
op_less              : 50
op_less_equal        : 51
op_multiplication    : 67
op_negation          : 45
op_not_equal         : 55
op_or                : 48
op_subtraction       : 60 64
parenthesis_close    : 25 34 57 77 80 84 87
parenthesis_open     : 25 34 57 77 80 84 87
print                : 87
receives             : 7
return_statement     : 83
semicolon            : 40 43 77 81 83 84 87
squarebracket_close  : 33 43 82 85
squarebracket_open   : 33 43 82 85
starting             : 5
until                : 80
variable             : 40 43
whole                : 18
words                : 20

Nonterminals, with rules where they appear

ASSIGN               : 70
ASSIGN_AUX           : 81
BLOCK                : 2 3
BLOCK_AUX            : 4
BLOCK_BODY           : 4
BLOCK_BODY_AUX       : 13
BLOCK_BODY_AUX1      : 14 16 17
BODY                 : 25 26 80
BODY_AUX             : 22 23
CALL                 : 76
CALL_AUX             : 77 78
CONDITION            : 71
CONDITION_AUX        : 25
CONSTANT             : 59 60 61
CONSTANT_AUX         : 28
CONSTANT_AUX1        : 34 36
DECLARATIONS         : 16
EXP                  : 44 47 48
EXPRESSION           : 25 33 34 36 43 57 77 78 80 81 82 83 85 87 88
EXPRESSION_AUX       : 44 47 48
EXPRESSION_AUX1      : 44
EXP_AUX              : 49
FACTOR               : 66
FACTOR_AUX           : 58
ITEM                 : 49 50 51 52 53 54 55 63 64
ITEM_AUX             : 62
LIST_DECLARATION     : 39
LOOP                 : 74
PROGRAM              : 0
PROGRAM_AUX          : 1 3
READ                 : 72
READ_AUX             : 84
RECEIVES_AUX         : 4
RECEIVES_AUX1        : 7 9
RETURN               : 75
RETURNS_AUX          : 4
STATEMENT            : 14 23
TERM                 : 62 67 68
TERM_AUX             : 66
TYPE                 : 7 9 11 40 43
VAR_DECLARATION      : 38
VAR_DECLARATION_AUX  : 40 41
WRITE                : 73
WRITE_AUX            : 87 88
empty                : 6 8 10 12 15 24 27 35 37 42 46 56 65 69 79 86 89

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . PROGRAM_AUX
    (2) PROGRAM_AUX -> . BLOCK
    (3) PROGRAM_AUX -> . PROGRAM_AUX BLOCK
    (4) BLOCK -> . BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY
    (5) BLOCK_AUX -> . starting
    (6) BLOCK_AUX -> . empty
    (90) empty -> .

    starting        shift and go to state 6
    block           reduce using rule 90 (empty -> .)

    BLOCK_AUX                      shift and go to state 2
    PROGRAM                        shift and go to state 3
    PROGRAM_AUX                    shift and go to state 4
    empty                          shift and go to state 1
    BLOCK                          shift and go to state 5

state 1

    (6) BLOCK_AUX -> empty .

    block           reduce using rule 6 (BLOCK_AUX -> empty .)


state 2

    (4) BLOCK -> BLOCK_AUX . block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY

    block           shift and go to state 7


state 3

    (0) S' -> PROGRAM .



state 4

    (1) PROGRAM -> PROGRAM_AUX .
    (3) PROGRAM_AUX -> PROGRAM_AUX . BLOCK
    (4) BLOCK -> . BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY
    (5) BLOCK_AUX -> . starting
    (6) BLOCK_AUX -> . empty
    (90) empty -> .

    $end            reduce using rule 1 (PROGRAM -> PROGRAM_AUX .)
    starting        shift and go to state 6
    block           reduce using rule 90 (empty -> .)

    BLOCK_AUX                      shift and go to state 2
    empty                          shift and go to state 1
    BLOCK                          shift and go to state 8

state 5

    (2) PROGRAM_AUX -> BLOCK .

    starting        reduce using rule 2 (PROGRAM_AUX -> BLOCK .)
    block           reduce using rule 2 (PROGRAM_AUX -> BLOCK .)
    $end            reduce using rule 2 (PROGRAM_AUX -> BLOCK .)


state 6

    (5) BLOCK_AUX -> starting .

    block           reduce using rule 5 (BLOCK_AUX -> starting .)


state 7

    (4) BLOCK -> BLOCK_AUX block . id RECEIVES_AUX RETURNS_AUX BLOCK_BODY

    id              shift and go to state 9


state 8

    (3) PROGRAM_AUX -> PROGRAM_AUX BLOCK .

    starting        reduce using rule 3 (PROGRAM_AUX -> PROGRAM_AUX BLOCK .)
    block           reduce using rule 3 (PROGRAM_AUX -> PROGRAM_AUX BLOCK .)
    $end            reduce using rule 3 (PROGRAM_AUX -> PROGRAM_AUX BLOCK .)


state 9

    (4) BLOCK -> BLOCK_AUX block id . RECEIVES_AUX RETURNS_AUX BLOCK_BODY
    (7) RECEIVES_AUX -> . receives colon id of_type TYPE RECEIVES_AUX1
    (8) RECEIVES_AUX -> . empty
    (90) empty -> .

    receives        shift and go to state 12
    block_returns   reduce using rule 90 (empty -> .)
    curlybraces_open reduce using rule 90 (empty -> .)

    RECEIVES_AUX                   shift and go to state 10
    empty                          shift and go to state 11

state 10

    (4) BLOCK -> BLOCK_AUX block id RECEIVES_AUX . RETURNS_AUX BLOCK_BODY
    (11) RETURNS_AUX -> . block_returns TYPE
    (12) RETURNS_AUX -> . empty
    (90) empty -> .

    block_returns   shift and go to state 15
    curlybraces_open reduce using rule 90 (empty -> .)

    RETURNS_AUX                    shift and go to state 13
    empty                          shift and go to state 14

state 11

    (8) RECEIVES_AUX -> empty .

    block_returns   reduce using rule 8 (RECEIVES_AUX -> empty .)
    curlybraces_open reduce using rule 8 (RECEIVES_AUX -> empty .)


state 12

    (7) RECEIVES_AUX -> receives . colon id of_type TYPE RECEIVES_AUX1

    colon           shift and go to state 16


state 13

    (4) BLOCK -> BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX . BLOCK_BODY
    (13) BLOCK_BODY -> . curlybraces_open BLOCK_BODY_AUX curlybraces_close

    curlybraces_open shift and go to state 18

    BLOCK_BODY                     shift and go to state 17

state 14

    (12) RETURNS_AUX -> empty .

    curlybraces_open reduce using rule 12 (RETURNS_AUX -> empty .)


state 15

    (11) RETURNS_AUX -> block_returns . TYPE
    (18) TYPE -> . whole
    (19) TYPE -> . decimal
    (20) TYPE -> . words
    (21) TYPE -> . boolean

    whole           shift and go to state 23
    decimal         shift and go to state 20
    words           shift and go to state 22
    boolean         shift and go to state 21

    TYPE                           shift and go to state 19

state 16

    (7) RECEIVES_AUX -> receives colon . id of_type TYPE RECEIVES_AUX1

    id              shift and go to state 24


state 17

    (4) BLOCK -> BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY .

    starting        reduce using rule 4 (BLOCK -> BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY .)
    block           reduce using rule 4 (BLOCK -> BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY .)
    $end            reduce using rule 4 (BLOCK -> BLOCK_AUX block id RECEIVES_AUX RETURNS_AUX BLOCK_BODY .)


state 18

    (13) BLOCK_BODY -> curlybraces_open . BLOCK_BODY_AUX curlybraces_close
    (16) BLOCK_BODY_AUX -> . DECLARATIONS BLOCK_BODY_AUX1
    (17) BLOCK_BODY_AUX -> . BLOCK_BODY_AUX1
    (38) DECLARATIONS -> . VAR_DECLARATION
    (39) DECLARATIONS -> . LIST_DECLARATION
    (14) BLOCK_BODY_AUX1 -> . STATEMENT BLOCK_BODY_AUX1
    (15) BLOCK_BODY_AUX1 -> . empty
    (40) VAR_DECLARATION -> . variable id VAR_DECLARATION_AUX of_type TYPE semicolon
    (43) LIST_DECLARATION -> . variable id squarebracket_open EXPRESSION squarebracket_close of_type TYPE semicolon
    (70) STATEMENT -> . ASSIGN
    (71) STATEMENT -> . CONDITION
    (72) STATEMENT -> . READ
    (73) STATEMENT -> . WRITE
    (74) STATEMENT -> . LOOP
    (75) STATEMENT -> . RETURN
    (76) STATEMENT -> . CALL
    (90) empty -> .
    (81) ASSIGN -> . id ASSIGN_AUX op_assign EXPRESSION semicolon
    (25) CONDITION -> . if parenthesis_open EXPRESSION parenthesis_close BODY CONDITION_AUX
    (84) READ -> . input parenthesis_open id READ_AUX parenthesis_close semicolon
    (87) WRITE -> . print parenthesis_open EXPRESSION WRITE_AUX parenthesis_close semicolon
    (80) LOOP -> . do BODY until parenthesis_open EXPRESSION parenthesis_close
    (83) RETURN -> . return_statement EXPRESSION semicolon
    (77) CALL -> . call id parenthesis_open EXPRESSION CALL_AUX parenthesis_close semicolon

    variable        shift and go to state 41
    curlybraces_close reduce using rule 90 (empty -> .)
    id              shift and go to state 28
    if              shift and go to state 29
    input           shift and go to state 35
    print           shift and go to state 34
    do              shift and go to state 39
    return_statement shift and go to state 32
    call            shift and go to state 33

    RETURN                         shift and go to state 25
    STATEMENT                      shift and go to state 26
    READ                           shift and go to state 27
    LIST_DECLARATION               shift and go to state 30
    DECLARATIONS                   shift and go to state 31
    ASSIGN                         shift and go to state 36
    CONDITION                      shift and go to state 37
    BLOCK_BODY_AUX                 shift and go to state 38
    WRITE                          shift and go to state 40
    BLOCK_BODY_AUX1                shift and go to state 42
    VAR_DECLARATION                shift and go to state 43
    CALL                           shift and go to state 44
    empty                          shift and go to state 45
    LOOP                           shift and go to state 46

state 19

    (11) RETURNS_AUX -> block_returns TYPE .

    curlybraces_open reduce using rule 11 (RETURNS_AUX -> block_returns TYPE .)


state 20

    (19) TYPE -> decimal .

    semicolon       reduce using rule 19 (TYPE -> decimal .)
    comma           reduce using rule 19 (TYPE -> decimal .)
    block_returns   reduce using rule 19 (TYPE -> decimal .)
    curlybraces_open reduce using rule 19 (TYPE -> decimal .)


state 21

    (21) TYPE -> boolean .

    semicolon       reduce using rule 21 (TYPE -> boolean .)
    comma           reduce using rule 21 (TYPE -> boolean .)
    block_returns   reduce using rule 21 (TYPE -> boolean .)
    curlybraces_open reduce using rule 21 (TYPE -> boolean .)


state 22

    (20) TYPE -> words .

    semicolon       reduce using rule 20 (TYPE -> words .)
    comma           reduce using rule 20 (TYPE -> words .)
    block_returns   reduce using rule 20 (TYPE -> words .)
    curlybraces_open reduce using rule 20 (TYPE -> words .)


state 23

    (18) TYPE -> whole .

    semicolon       reduce using rule 18 (TYPE -> whole .)
    comma           reduce using rule 18 (TYPE -> whole .)
    block_returns   reduce using rule 18 (TYPE -> whole .)
    curlybraces_open reduce using rule 18 (TYPE -> whole .)


state 24

    (7) RECEIVES_AUX -> receives colon id . of_type TYPE RECEIVES_AUX1

    of_type         shift and go to state 47


state 25

    (75) STATEMENT -> RETURN .

    id              reduce using rule 75 (STATEMENT -> RETURN .)
    if              reduce using rule 75 (STATEMENT -> RETURN .)
    input           reduce using rule 75 (STATEMENT -> RETURN .)
    print           reduce using rule 75 (STATEMENT -> RETURN .)
    do              reduce using rule 75 (STATEMENT -> RETURN .)
    return_statement reduce using rule 75 (STATEMENT -> RETURN .)
    call            reduce using rule 75 (STATEMENT -> RETURN .)
    curlybraces_close reduce using rule 75 (STATEMENT -> RETURN .)


state 26

    (14) BLOCK_BODY_AUX1 -> STATEMENT . BLOCK_BODY_AUX1
    (14) BLOCK_BODY_AUX1 -> . STATEMENT BLOCK_BODY_AUX1
    (15) BLOCK_BODY_AUX1 -> . empty
    (70) STATEMENT -> . ASSIGN
    (71) STATEMENT -> . CONDITION
    (72) STATEMENT -> . READ
    (73) STATEMENT -> . WRITE
    (74) STATEMENT -> . LOOP
    (75) STATEMENT -> . RETURN
    (76) STATEMENT -> . CALL
    (90) empty -> .
    (81) ASSIGN -> . id ASSIGN_AUX op_assign EXPRESSION semicolon
    (25) CONDITION -> . if parenthesis_open EXPRESSION parenthesis_close BODY CONDITION_AUX
    (84) READ -> . input parenthesis_open id READ_AUX parenthesis_close semicolon
    (87) WRITE -> . print parenthesis_open EXPRESSION WRITE_AUX parenthesis_close semicolon
    (80) LOOP -> . do BODY until parenthesis_open EXPRESSION parenthesis_close
    (83) RETURN -> . return_statement EXPRESSION semicolon
    (77) CALL -> . call id parenthesis_open EXPRESSION CALL_AUX parenthesis_close semicolon

    curlybraces_close reduce using rule 90 (empty -> .)
    id              shift and go to state 28
    if              shift and go to state 29
    input           shift and go to state 35
    print           shift and go to state 34
    do              shift and go to state 39
    return_statement shift and go to state 32
    call            shift and go to state 33

    RETURN                         shift and go to state 25
    LOOP                           shift and go to state 46
    READ                           shift and go to state 27
    BLOCK_BODY_AUX1                shift and go to state 48
    WRITE                          shift and go to state 40
    CALL                           shift and go to state 44
    empty                          shift and go to state 45
    STATEMENT                      shift and go to state 26
    ASSIGN                         shift and go to state 36
    CONDITION                      shift and go to state 37

state 27

    (72) STATEMENT -> READ .

    id              reduce using rule 72 (STATEMENT -> READ .)
    if              reduce using rule 72 (STATEMENT -> READ .)
    input           reduce using rule 72 (STATEMENT -> READ .)
    print           reduce using rule 72 (STATEMENT -> READ .)
    do              reduce using rule 72 (STATEMENT -> READ .)
    return_statement reduce using rule 72 (STATEMENT -> READ .)
    call            reduce using rule 72 (STATEMENT -> READ .)
    curlybraces_close reduce using rule 72 (STATEMENT -> READ .)


state 28

    (81) ASSIGN -> id . ASSIGN_AUX op_assign EXPRESSION semicolon
    (82) ASSIGN_AUX -> . squarebracket_open EXPRESSION squarebracket_close

    squarebracket_open shift and go to state 50

    ASSIGN_AUX                     shift and go to state 49

state 29

    (25) CONDITION -> if . parenthesis_open EXPRESSION parenthesis_close BODY CONDITION_AUX

    parenthesis_open shift and go to state 51


state 30

    (39) DECLARATIONS -> LIST_DECLARATION .

    id              reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    if              reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    input           reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    print           reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    do              reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    return_statement reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    call            reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)
    curlybraces_close reduce using rule 39 (DECLARATIONS -> LIST_DECLARATION .)


state 31

    (16) BLOCK_BODY_AUX -> DECLARATIONS . BLOCK_BODY_AUX1
    (14) BLOCK_BODY_AUX1 -> . STATEMENT BLOCK_BODY_AUX1
    (15) BLOCK_BODY_AUX1 -> . empty
    (70) STATEMENT -> . ASSIGN
    (71) STATEMENT -> . CONDITION
    (72) STATEMENT -> . READ
    (73) STATEMENT -> . WRITE
    (74) STATEMENT -> . LOOP
    (75) STATEMENT -> . RETURN
    (76) STATEMENT -> . CALL
    (90) empty -> .
    (81) ASSIGN -> . id ASSIGN_AUX op_assign EXPRESSION semicolon
    (25) CONDITION -> . if parenthesis_open EXPRESSION parenthesis_close BODY CONDITION_AUX
    (84) READ -> . input parenthesis_open id READ_AUX parenthesis_close semicolon
    (87) WRITE -> . print parenthesis_open EXPRESSION WRITE_AUX parenthesis_close semicolon
    (80) LOOP -> . do BODY until parenthesis_open EXPRESSION parenthesis_close
    (83) RETURN -> . return_statement EXPRESSION semicolon
    (77) CALL -> . call id parenthesis_open EXPRESSION CALL_AUX parenthesis_close semicolon

    curlybraces_close reduce using rule 90 (empty -> .)
    id              shift and go to state 28
    if              shift and go to state 29
    input           shift and go to state 35
    print           shift and go to state 34
    do              shift and go to state 39
    return_statement shift and go to state 32
    call            shift and go to state 33

    RETURN                         shift and go to state 25
    LOOP                           shift and go to state 46
    READ                           shift and go to state 27
    BLOCK_BODY_AUX1                shift and go to state 52
    WRITE                          shift and go to state 40
    CALL                           shift and go to state 44
    empty                          shift and go to state 45
    STATEMENT                      shift and go to state 26
    ASSIGN                         shift and go to state 36
    CONDITION                      shift and go to state 37

state 32

    (83) RETURN -> return_statement . EXPRESSION semicolon
    (44) EXPRESSION -> . EXPRESSION_AUX EXP EXPRESSION_AUX1
    (45) EXPRESSION_AUX -> . op_negation
    (46) EXPRESSION_AUX -> . empty
    (90) empty -> .

    op_negation     shift and go to state 53
    parenthesis_open reduce using rule 90 (empty -> .)
    op_addition     reduce using rule 90 (empty -> .)
    op_subtraction  reduce using rule 90 (empty -> .)
    id              reduce using rule 90 (empty -> .)
    cst_whole       reduce using rule 90 (empty -> .)
    cst_decimal     reduce using rule 90 (empty -> .)
    cst_words       reduce using rule 90 (empty -> .)
    cst_boolean     reduce using rule 90 (empty -> .)

    EXPRESSION_AUX                 shift and go to state 54
    EXPRESSION                     shift and go to state 55
    empty                          shift and go to state 56

state 33

    (77) CALL -> call . id parenthesis_open EXPRESSION CALL_AUX parenthesis_close semicolon

    id              shift and go to state 57


state 34

    (87) WRITE -> print . parenthesis_open EXPRESSION WRITE_AUX parenthesis_close semicolon

    parenthesis_open shift and go to state 58


state 35

    (84) READ -> input . parenthesis_open id READ_AUX parenthesis_close semicolon

    parenthesis_open shift and go to state 59


state 36

    (70) STATEMENT -> ASSIGN .

    id              reduce using rule 70 (STATEMENT -> ASSIGN .)
    if              reduce using rule 70 (STATEMENT -> ASSIGN .)
    input           reduce using rule 70 (STATEMENT -> ASSIGN .)
    print           reduce using rule 70 (STATEMENT -> ASSIGN .)
    do              reduce using rule 70 (STATEMENT -> ASSIGN .)
    return_statement reduce using rule 70 (STATEMENT -> ASSIGN .)
    call            reduce using rule 70 (STATEMENT -> ASSIGN .)
    curlybraces_close reduce using rule 70 (STATEMENT -> ASSIGN .)


state 37

    (71) STATEMENT -> CONDITION .

    id              reduce using rule 71 (STATEMENT -> CONDITION .)
    if              reduce using rule 71 (STATEMENT -> CONDITION .)
    input           reduce using rule 71 (STATEMENT -> CONDITION .)
    print           reduce using rule 71 (STATEMENT -> CONDITION .)
    do              reduce using rule 71 (STATEMENT -> CONDITION .)
    return_statement reduce using rule 71 (STATEMENT -> CONDITION .)
    call            reduce using rule 71 (STATEMENT -> CONDITION .)
    curlybraces_close reduce using rule 71 (STATEMENT -> CONDITION .)


state 38

    (13) BLOCK_BODY -> curlybraces_open BLOCK_BODY_AUX . curlybraces_close

    curlybraces_close shift and go to state 60


state 39

    (80) LOOP -> do . BODY until parenthesis_open EXPRESSION parenthesis_close
    (22) BODY -> . curlybraces_open BODY_AUX curlybraces_close

    curlybraces_open shift and go to state 62

    BODY                           shift and go to state 61

state 40

    (73) STATEMENT -> WRITE .
